--- a/youtube/index.html
+++ b/youtube/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap">
+    <link rel="stylesheet" href="./style.css">
     <title>youtube mobile</title>
+    <script src="./main.js"></script>
 </head>
 <body>
     <!-- header -->
@@ -17,11 +20,82 @@
         <i class="fas fa-search"></i>
         <i class="fas fa-ellipsis-v"></i>
     </header>
-
     <!-- video player -->
-    <section class="player"></section>
-    <section class="info"></section>
-    <section class="Upnext"></section>
+    <section class="player">
+        <video controls src="./"></video>
+    </section>
+
+    <!-- video information -->
+    <section class="info">
+        <!-- metadata -->
+        <div class="metadata">
+            <ul class="hashtags">
+                <li>#DreamCoding</li>
+                <li>#DreamCoders</li>
+                <li>#Yoon</li>
+            </ul>
+            <div class="titleAndButton">
+                <span class="title clamp">Clone Coding : Youtube Mobile Website 유튜브 모바일 웹사이트 따라 만들기 | HTML, CSS, JAVASCRIPT</span>
+                <button class="moreBtn">
+                    <i class="clicked fas fa-caret-down"></i>
+                </button>
+            </div>
+                <span class="views">1M views 1 month ago</span>
+        </div>
+        <!-- actions -->
+        <div class="actions">
+           <li><button><i class="active fas fa-thumbs-up"></i><span>1K</span></button></li>
+           <li><button><i class="fas fa-thumbs-down"></i><span>0</span></button></li>
+           <li><button><i class="fas fa-share"></i><span>Share</span></button></li>
+           <li><button><i class="fas fa-plus"></i><span>Save</span></button></li>
+           <li><button><i class="fas fa-font-awesome-flag"></i><span>Report</span></button></li>
+           
+        </div>
+        <!-- channel -->
+        <div class="channel">
+            <div class="metadata">
+                <img src="./image/4.jpg" alt="">
+                <div class="info">
+                    <span class="name">Jungyoon</span>
+                    <span class="subscribers">1M subscribers</span>
+                </div>
+            </div>
+            <button class="subscribe">subscribe</button>
+        </div>
+    </section>
+    <section class="upNext">
+        <span class="title">Up next</span>
+        <ul>
+            <li class="item">
+                <div class="img"><img src="./image/2.jpg" alt="newyorkfoto"></div>
+                <div class="info">
+                    <span class="title">뉴욕 여행기</span>
+                    <span class="name">Jungyoon</span>
+                    <span class="views">45K views</span>
+                </div>
+                <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
+            </li>
+            <li class="item">
+                <div class="img"><img src="./image/2.jpg" alt="newyorkfoto"></div>
+                <div class="info">
+                    <span class="title">뉴욕 여행기</span>
+                    <span class="name">Jungyoon</span>
+                    <span class="views">45K views</span>
+                </div>
+                <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
+            </li>
+            <li class="item">
+                <div class="img"><img src="./image/2.jpg" alt="newyorkfoto"></div>
+                <div class="info">
+                    <span class="title">뉴욕 여행기</span>
+                    <span class="name">Jungyoon</span>
+                    <span class="views">45K views</span>
+                </div>
+                <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
+            </li>
+        </ul>
+    </section>
+    <div class="infoAndUpNext"></div>
 </body>
 <script src="https://kit.fontawesome.com/b9c3c0b1e7.js" crossorigin="anonymous"></script>
 </html>
