--- a/youtube/index.html
+++ b/youtube/index.html
@@ -4,52 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap">
+    <title>Youtube Clone Coding</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Combo&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
-    <title>youtube mobile</title>
     <script src="./main.js"></script>
 </head>
 <body>
-    <!-- header -->
     <header>
+        <!-- header -->
         <div class="logo">
-        <i class="fab fa-youtube"></i>
-        <span class="title">Youtube</span>
+            <i class="fab fa-youtube"></i>
+            <span class="title">Youtube</span>
         </div>
-        <div class="icons"></div>
-        <i class="fas fa-search"></i>
-        <i class="fas fa-ellipsis-v"></i>
+        <div class="icons">
+            <i class="fas fa-search"></i>
+            <i class="fas fa-ellipsis-v"></i>
+        </div>
     </header>
-    <!-- video player -->
-    <section class="player">
-        <video controls src="./"></video>
-    </section>
-
-    <!-- video information -->
-    <section class="info">
+    <!-- video -->
+        <section class="player">
+            <iframe width="757" height="426" src="https://www.youtube.com/embed/on09zv-ujyc" title="단체로 항의하는 아기 강아지들ㅋㅋㅋ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </section>
+        
+        <!-- video info & up next -->
+        <div class="infoAndUpNext">
+         <section class="info">
         <!-- metadata -->
         <div class="metadata">
             <ul class="hashtags">
-                <li>#DreamCoding</li>
-                <li>#DreamCoders</li>
-                <li>#Yoon</li>
+                <li>#강아지</li>
+                <li>#댕댕V-LOG</li>
+                <li>#강아지덕질생활</li>
             </ul>
             <div class="titleAndButton">
-                <span class="title clamp">Clone Coding : Youtube Mobile Website 유튜브 모바일 웹사이트 따라 만들기 | HTML, CSS, JAVASCRIPT</span>
+                <span class="title clamp">
+                    정윤 취미 공유기 : 정윤의 강아지 덕질을 담은 강아지vlog 1탄! 개중에 개는 시고르자브종이 제일 귀여운거 아시죠.. 거기에 진돗개를 곁들인 귀여움 치사량 100! 평생 행복하고 행복하고 또 행복해라ㅜㅜ
+                </span>
                 <button class="moreBtn">
-                    <i class="clicked fas fa-caret-down"></i>
+                    <i class="fas fa-caret-down"></i>
                 </button>
             </div>
-                <span class="views">1M views 1 month ago</span>
-        </div>
-        <!-- actions -->
+                <span class="views">30M views</span>
+            </div>
+        <!-- action -->
         <div class="actions">
-           <li><button><i class="active fas fa-thumbs-up"></i><span>1K</span></button></li>
-           <li><button><i class="fas fa-thumbs-down"></i><span>0</span></button></li>
-           <li><button><i class="fas fa-share"></i><span>Share</span></button></li>
-           <li><button><i class="fas fa-plus"></i><span>Save</span></button></li>
-           <li><button><i class="fas fa-font-awesome-flag"></i><span>Report</span></button></li>
-           
+           <li><button><i class="active fa-solid fa-thumbs-up"></i><span>80K</span></button></li>
+           <li><button><i class="fa-solid fa-thumbs-down"></i><span>0</span></button></li>
+           <li><button><i class="fa-solid fa-share"></i><span>Share</span></button></li>
+           <li><button><i class="fa-solid fa-download"></i><span>Save</span></button></li>
+           <li><button><i class="fa-solid fa-flag"></i><span>Report</span></button></li>
         </div>
         <!-- channel -->
         <div class="channel">
@@ -57,45 +62,46 @@
                 <img src="./image/4.jpg" alt="">
                 <div class="info">
                     <span class="name">Jungyoon</span>
-                    <span class="subscribers">1M subscribers</span>
+                    <span class="subscribers">40M subscribers</span>
                 </div>
             </div>
-            <button class="subscribe">subscribe</button>
+            <button class="subscribe">구독</button>
         </div>
     </section>
+    <!-- upNext -->
     <section class="upNext">
-        <span class="title">Up next</span>
+        <span class="title">upNext</span>
         <ul>
             <li class="item">
-                <div class="img"><img src="./image/2.jpg" alt="newyorkfoto"></div>
+                <div class="image"><img src="./image/6.jpg" alt=""></div>
                 <div class="info">
-                    <span class="title">뉴욕 여행기</span>
-                    <span class="name">Jungyoon</span>
-                    <span class="views">45K views</span>
+                    <span class="title">중국 고대의 역사! 시안이 궁금하신가요? 진시황부터 종루까지 시안 한 눈에 쏙! 미세먼지 최고인거 안비밀~</span>
+                    <span class="name">jungyoon</span>
+                    <span class="views">82K views</span>
                 </div>
-                <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
+                <button class="moreBtn"><i class="fa-solid fa-ellipsis-vertical"></i></button>
             </li>
             <li class="item">
-                <div class="img"><img src="./image/2.jpg" alt="newyorkfoto"></div>
+                <div class="image"><img src="./image/7.jpg" alt=""></div>
                 <div class="info">
-                    <span class="title">뉴욕 여행기</span>
-                    <span class="name">Jungyoon</span>
-                    <span class="views">45K views</span>
+                    <span class="title">중국 4대화로 중 한 도시 난징! 11월말에 24도 실화? 초겨울에 블라우스 한 장입고 난징 찍기!</span>
+                    <span class="name">jungyoon</span>
+                    <span class="views">64K views</span>
                 </div>
-                <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
+                <button class="moreBtn"><i class="fa-solid fa-ellipsis-vertical"></i></button>
             </li>
             <li class="item">
-                <div class="img"><img src="./image/2.jpg" alt="newyorkfoto"></div>
+                <div class="image"><img src="./image/3.jpg" alt=""></div>
                 <div class="info">
-                    <span class="title">뉴욕 여행기</span>
-                    <span class="name">Jungyoon</span>
-                    <span class="views">45K views</span>
+                    <span class="title">중국에 이런 도시 있다고 왜 안알려줬어.. 물의도시 항주! 한국의 한강이 그립다면 항주의 서호로 오세요! </span>
+                    <span class="name">jungyoon</span>
+                    <span class="views">73K views</span>
                 </div>
-                <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
+                <button class="moreBtn"><i class="fa-solid fa-ellipsis-vertical"></i></button>
             </li>
         </ul>
-    </section>
-    <div class="infoAndUpNext"></div>
+        </section>
+        </div>
+    <script src="https://kit.fontawesome.com/b9c3c0b1e7.js" crossorigin="anonymous"></script>
 </body>
-<script src="https://kit.fontawesome.com/b9c3c0b1e7.js" crossorigin="anonymous"></script>
 </html>
