--- a/넷마블/index.html
+++ b/넷마블/index.html
@@ -40,25 +40,25 @@
         <div class="home"></div>
     </section>
     <section id="info">
-            <div class="theme_one">
-                <h1>문화를 만들고 인재를 키우고 <br> 마음을 나눕니다</h1>
-                <div class="yellow_line">-</div>
+            <div>
+                <h1 class="theme">문화를 만들고 인재를 키우고 <br> 마음을 나눕니다</h1>
+                <div class="yellow_line_1"></div>
             </div>
             <div class="info_detail">
                 <h3>넷마블문화재단은 문화적 가치 확산을 통해 우리 사회의 미래 경쟁력을 높여 가고자 <br> 다양한 공익 활동을 전개해 나가고 있습니다.</h3>
             </div>
             <div id="photo">
-                <div class="photo_one">
+                <div>
                     <img src="./img/photo1.png" alt="photo_one">
                     <h2>문화 만들기<i class="fa-solid fa-chevron-right"></i></h2>
                     <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나<br>즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 갑니다.</p>
                 </div>
-                <div class="photo_two">
+                <div>
                     <img src="./img/photo2.png" alt="photo_two">
                     <h2>인재 키우기<i class="fa-solid fa-chevron-right"></i></h2>
                     <p>미래 문화 산업을 이끌어 갈 가능성 있는 인재들을 발굴하고<br>체계적인 성장 기회를 지원합니다.</p>
                 </div>
-                <div class="photo_three">
+                <div>
                     <img src="./img/photo3.png" alt="photo_three">
                     <h2>마음 나누기<i class="fa-solid fa-chevron-right"></i></h2>
                     <p>나눔이 가진 영향력과 가치를 알리고 쉽게 동참할 수 있는 <br> 기회를 제공하여 모두가 즐거운 나눔 문화를 확산해 갑니다.</p>
@@ -72,8 +72,8 @@
     </section>
     <section id="news">
         <div>
-            <h1 class="theme_two">재단소식</h1>
-            <div class="yellow_line"></div>
+            <h1 class="theme">재단소식</h1>
+            <div class="yellow_line_2"></div>
         </div>
         <ul class="news_menu">
             <li>공지사항</li>
@@ -84,6 +84,7 @@
             <a href="#" class="program_box">
                 <img src="./img/box1.png" alt="">
                 <h2>넷마블게임박물관 건립준비캠페인</h2>
+                <div class="program_smallBox"></div>
                 <h4 class="date">공지사항 2022.09.14</h4>
             </a>
             <a href="#" class="program_box">
