--- a/넷마블/index.html
+++ b/넷마블/index.html
@@ -4,126 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>넷마블 클론코딩</title>
+    <title>넷마블</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <nav id="navbar">
-        <div class="navbar_logo">
-            <i class="fa-solid fa-cloud"></i>
-            <a href="#">넷마블문화재단</a>
-        </div>
-        <ul class="navbar_menu">
-            <li class="navbar_menu_list"><a href="#">재단소개</a>
-                <ul class="navbar_menu_detail">
-                    <li><a href="#">넷마블문화재단</a></li>
-                    <li><a href="#">오시는길</a></li>
-                </ul>
-            </li>
-            <li class="navbar_menu_list"><a href="#">재단활동</a>
-                <ul class="navbar_menu_detail">
-                    <li><a href="#">문화만들기</a></li>
-                    <li><a href="#">인재키우기</a></li>
-                    <li><a href="#">마음나누기</a></li>
-                </ul>
-            </li>
-            <li class="navbar_menu_list"><a href="#">재단소식</a>
-                <ul class="navbar_menu_detail">
-                    <li><a href="#">공지사항</a></li>
-                    <li><a href="#">뉴스룸</a></li>
-                    <li><a href="#">소셜미디어</a></li>
-                </ul>
-            </li>
-        </ul>
-    </nav>
-    <section id="slide">
-        <div class="home"></div>
-    </section>
-    <section id="info">
-            <div>
-                <h1 class="theme">문화를 만들고 인재를 키우고 <br> 마음을 나눕니다</h1>
-                <div class="yellow_line_1"></div>
-            </div>
-            <div class="info_detail">
-                <h3>넷마블문화재단은 문화적 가치 확산을 통해 우리 사회의 미래 경쟁력을 높여 가고자 <br> 다양한 공익 활동을 전개해 나가고 있습니다.</h3>
-            </div>
-            <div id="photo">
-                <div>
-                    <img src="./img/photo1.png" alt="photo_one">
-                    <h2>문화 만들기<i class="fa-solid fa-chevron-right"></i></h2>
-                    <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나<br>즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 갑니다.</p>
-                </div>
-                <div>
-                    <img src="./img/photo2.png" alt="photo_two">
-                    <h2>인재 키우기<i class="fa-solid fa-chevron-right"></i></h2>
-                    <p>미래 문화 산업을 이끌어 갈 가능성 있는 인재들을 발굴하고<br>체계적인 성장 기회를 지원합니다.</p>
-                </div>
-                <div>
-                    <img src="./img/photo3.png" alt="photo_three">
-                    <h2>마음 나누기<i class="fa-solid fa-chevron-right"></i></h2>
-                    <p>나눔이 가진 영향력과 가치를 알리고 쉽게 동참할 수 있는 <br> 기회를 제공하여 모두가 즐거운 나눔 문화를 확산해 갑니다.</p>
-                </div>
-            </div>
-                <div class="yellow_box">
-                    <h2>우리는 <span>문화적 가치를 확산</span>하여 우리 사회의 <br> 미래 경쟁력을 높여갑니다</h2>
-                    <p>주요목적</p>
-                </div>
-                <div class="image"><img src="./img/yellowbox.png" alt=""></div>
-    </section>
-    <section id="news">
-        <div>
-            <h1 class="theme">재단소식</h1>
-            <div class="yellow_line_2"></div>
-        </div>
-        <ul class="news_menu">
-            <li>공지사항</li>
-            <li>뉴스룸</li>
-            <li>소셜미디어</li>
-        </ul>
-        <div class="news_program">
-            <a href="#" class="program_box">
-                <img src="./img/box1.png" alt="">
-                <h2>넷마블게임박물관 건립준비캠페인</h2>
-                <div class="program_smallBox"></div>
-                <h4 class="date">공지사항 2022.09.14</h4>
-            </a>
-            <a href="#" class="program_box">
-                <img src="./img/box2.png" alt="">
-                <h2>[게임소통학교]도미노 영상 이벤트 결과 발표</h2>
-                <h4 class="date">공지사항 2022.09.14</h4>
-            </a>
-            <a href="#" class="program_box">
-                <h2>[마감] 넷마블문화재단 사업기획 및 운영 담당자 채용 공고</h2>
-                <p>넷마블문화재단에서 아래와 같이 새로운 직원을 모집합니다. 많은 분들의 지원 바랍니다.</p>
-                <h4 class="date">공지사항 2022.09.14</h4>
-            </a>
-        </div>
-    </section>
-    <footer id="footer">
-        <div class="navbar_logo">
-                <i class="fa-solid fa-cloud"></i>
+    <div class="navbar">
+        <div class="logo">
+            <h1>
                 <a href="#">넷마블문화재단</a>
+            </h1>
         </div>
-        <h4 class="address">서울특별시 구로구 디지털로26길 38, G-Tower 넷마블</h4>
-        <h4 class="copyright">Copyright © Netmable Corp. All Rights Reserved.</h4>
-        <ul class="site">
-            <li class="site_menu"><a href="#">개인정보처리방침 |  </a></li>
-            <li class="site_menu"><a href="#">SNS 저작물 이용 동의서 |</a></li>
-            <li class="site_menu"><a href="#">이메일 문의 |  </a></li>
-            <li class="site_menu"><a href="#">주무관청 |  </a></li>
-            <li class="site_menu"><a href="#">국세청</a></li>
-        </ul>
-        <div class="family_site">
-            <a href="#">Family Site</a>
+        <div class="gnb">
+            <ul class="list">
+                <li>재단소개</li>
+                <li>재단활동</li>
+                <li>재단소식</li>
+            </ul>
         </div>
-        <div class="link">
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-youtube"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-        </div>
-
+    </div>
+    <div class="slide">
         
-    </footer>
-    <script src="https://kit.fontawesome.com/b9c3c0b1e7.js" crossorigin="anonymous"></script>
+    </div>
+    
 </body>
 </html>
