--- a/넷마블/index.html
+++ b/넷마블/index.html
@@ -25,16 +25,15 @@
     </div>
 
     <div class="home">
-        <div class="title">
+        <div class="title clearfix">
             <p class="title_01">문화를 만들고 인재를 키우고 <br> 마음을 나눕니다</p>
             <p class="title_02">넷마블문화재단은 문화적 가치 확산을 통해 우리 사회의 미래 경쟁력을 높여 가고자 <br> 다양한 공익 활동을 전개해 나가고 있습니다.</p>
         </div>
     </div>
-    <div class="link">
+    <div class="link clearfix">
         <div class="link_list">
             <a href="#">
-                <div class="thumb">
-                    <img src="#" alt="">
+                <div class="thumb1">
                 </div>
                 <div class="txtbox">
                     <span class="tit">문화 만들기</span>
@@ -44,8 +43,7 @@
         </div>  
         <div class="link_list"> 
             <a href="#">
-                <div class="thumb">
-                    <img src="#" alt="">
+                <div class="thumb2">
                 </div>
                 <div class="txtbox">
                     <span class="tit">인재 키우기</span>
@@ -55,8 +53,7 @@
         </div>    
         <div class="link_list">
             <a href="#">
-                <div class="thumb">
-                    <img src="#" alt="">
+                <div class="thumb3">
                 </div>
                 <div class="txtbox">
                     <span class="tit">마음 나누기</span>
