--- a/넷마블/netmarble.html
+++ b/넷마블/netmarble.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
@@ -40,7 +40,7 @@
             <li>
                 <a href="#">
                     <img src="./image/link01.8c7a40e.jpg" alt=""></img>
-                    <div class="txtbox">
+                    <div class="txt">
                         <h3>문화 만들기</h3>
                         <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나 즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 갑니다.</p>
                     </div>
@@ -49,7 +49,7 @@
             <li>
                 <a href="#">
                     <img src="./image/link02.b7f7bba.jpg" alt=""> </img>
-                    <div class="txtbox">
+                    <div class="txt">
                         <h3>인재 키우기</h3>
                         <p>미래 문화 산업을 이끌어 갈 가능성 있는 인재들을 발굴하고 체계적인 성장 기회를 지원합니다.</p>
                     </div>
@@ -58,7 +58,7 @@
             <li>
                 <a href="#">
                     <img src="./image/link03.73d78ef.jpg" alt=""></img>
-                    <div class="txtbox">
+                    <div class="txt">
                         <h3>마음 나누기</h3>
                         <p>나눔이 가진 영향력과 가치를 알리고 쉽게 동참할 수 있는 기회를 제공하여 모두가 즐거운 나눔 문화를 확산해 갑니다.</p>
                     </div>
@@ -92,28 +92,29 @@
             <ul class="clearfix">
                 <li>
                     <a href="#">
-                        <img src="./image/link01.8c7a40e.jpg" alt=""></img>
-                        <div class="txtbox">
-                            <h3>문화 만들기</h3>
-                            <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나 즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 갑니다.</p>
+                        <img src="./image/75f1ec08d4024494994f04c75e33ad9b_1655951509048_lp.jpg" alt=""></img>
+                        <div class="txt2">
+                            <h3>제 14회 게임콘서트 개최 안내</h3>
+                            <p>9월 게임콘서트 참여하기 링크</p>
+                            <p>공지사항 2022.09.23</p>
                         </div>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="./image/link01.8c7a40e.jpg" alt=""> </img>
-                        <div class="txtbox">
-                            <h3>문화 만들기</h3>
-                            <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나 즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 갑니다.</p>
+                        <img src="./image/89c69fcefc60421192e547289fda9bbf_1663132574969_lp.jpg" alt=""> </img>
+                        <div class="txt2">
+                            <h3>넷마블게임박물관 건립준비캠페인</h3>
+                            <p>공지사항 2022.09.14</p>
                         </div>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="./image/link01.8c7a40e.jpg" alt=""></img>
-                        <div class="txtbox">
-                            <h3>문화 만들기</h3>
-                            <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나 즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 갑니다.</p>
+                        <img src="./image/2fc7bca2fb5b4b598711919a7dbd1420_1660867099469_lp.jpg" alt=""></img>
+                        <div class="txt2">
+                            <h3>[게임소통학교] 도미노 영상 이벤트 결과 발표</h3>
+                            <p>공지사항 2022.08.18</p>
                         </div>
                     </a>
                 </li>
