--- a/가비아/index.html
+++ b/가비아/index.html
@@ -97,32 +97,29 @@
         </ul>
     </div>
     </div>
-    <div class="culture container">
-        <div class="clearfix">
+    <div class="culture">
             <div class="culture_title">
-                <h3>Gabia Culture
+                <h3>Gabia Culture</h3>
                 <i class="fa-regular fa-circle-arrow-up-right"></i>
-                </h3>
             </div>
             <div class="culture_content">
                 <h2>가비아는 새로운 사람과의 소통을 통해 <br> 스스로 문화를 만들어 갑니다</h2>
             </div>
-        </div>
     </div>    
     <div class="job">
         <p>가비아의 일과 사람들을 확인해보세요</p>
         <a href="#">직무소개 바로가기</a>
     </div>
     <!-- footer -->
-    <div class="footer container">
+    <div class="footer">
         <div class="footer_left">
             <div class="footer_link">
-                <a href="#">가비아 |</a>
+                <a href="#">가비아 </a>
                 <a href="#">인재채용</a>
             </div>
             <div class="addr">
                 <p>(주)가비아 경기도 성남시 분당구 대왕판교로 660, B동 4층(삼평동), 13494</p>
-                <p>대표이사: 김홍국 사업자등록번호:214-86-39239 통신판매업 신고번호:제2012-경기성남-1188호</p>
+                <span>대표이사: 김홍국 사업자등록번호:214-86-39239 통신판매업 신고번호:제2012-경기성남-1188호</span>
             </div>
             <div class="copyright">
                 <p>©Gabia Inc. All Rights Reserved.</p>
